* Makefile.in (jcf-parse.o): Depend on $(PARSE_H).         (parse-scan.o): Depend on toplev.h.         * class.c (make_method_value): Add prototype.  Make it static.         Remove unused second argument, caller changed.         * expr.c (java_lang_expand_expr): Remove unused variable         `return_label'.         * java-tree.h: Don't prototype find_in_current_zip.         Add prototypes for verify_constant_pool, start_java_method,         end_java_method, give_name_to_locals, expand_byte_code,         open_in_zip, set_constant_value, find_constant1, find_constant2,         find_utf8_constant, find_string_constant, find_class_constant,         find_fieldref_index, find_methodref_index, write_constant_pool,         count_constant_pool_bytes and encode_newarray_type.         * jcf-dump.c: Remove unused variable `LONG_temp'.         * jcf-parse.c: Include parse.h.         (jcf_parse_source): Remove unused parameter, all callers changed.         (jcf_figure_file_type): Add static prototype.         (find_in_current_zip): Likewise.  Also remove unused parameter,         all callers changed.         (read_class): Initialize variable `saved_pos'.         * jcf-reader.c (jcf_parse_preamble): Mark variables         `minor_version' and `major_version' with ATTRIBUTE_UNUSED.         * lex.c (java_is_eol): Wrap prototype and definition in !JC1_LITE.         (java_init_lex): Wrap variable `java_lang_imported' in !JC1_LITE.         (java_parse_doc_section): Initialize variable `seen_star'.         (java_lex): Wrap variable `number_beginning' in !JC1_LITE.         (java_lex_error): Mark parameters `msg' and `forward' with         ATTRIBUTE_UNUSED.         (java_get_line_col): Mark parameters `filename' and `line' with         ATTRIBUTE_UNUSED.         * parse-scan.y: Include toplev.h.         (yyerror): Mark parameter `msg' with ATTRIBUTE_UNUSED.         * parse.h: use `struct JCF', not plain `JCF'.         (java_parser_context_save_global, java_expand_classes         java_parse

--- a/gcc/java/Makefile.in
+++ b/gcc/java/Makefile.in
@@ -300,7 +300,7 @@ jcf-depend.o : jcf-depend.c $(CONFIG_H) $(srcdir)/../system.h jcf.h
 jcf-io.o : jcf-io.c $(CONFIG_H) $(srcdir)/../system.h
 jcf-parse.o : jcf-parse.c $(CONFIG_H) $(JAVA_TREE_H) $(srcdir)/../flags.h \
   $(srcdir)/../input.h java-except.h $(srcdir)/../system.h \
-  $(srcdir)/../toplev.h
+  $(srcdir)/../toplev.h $(PARSE_H)
 jcf-write.o : jcf-write.c $(CONFIG_H) $(JAVA_TREE_H) jcf.h $(RTL_H) \
   java-opcodes.h parse.h buffer.h $(srcdir)/../system.h $(srcdir)/../toplev.h
 jv-scan.o : jv-scan.c $(CONFIG_H) $(srcdir)/../system.h
@@ -309,7 +309,7 @@ lang.o : lang.c $(CONFIG_H) $(JAVA_TREE_H) jcf.h $(srcdir)/../input.h \
   $(srcdir)/../toplev.h $(srcdir)/../system.h
 mangle.o : mangle.c $(CONFIG_H) jcf.h $(srcdir)/../system.h \
   $(srcdir)/../toplev.h
-parse-scan.o : $(CONFIG_H) $(srcdir)/../system.h
+parse-scan.o : $(CONFIG_H) $(srcdir)/../system.h $(srcdir)/../toplev.h
 typeck.o : typeck.c $(CONFIG_H) $(JAVA_TREE_H) jcf.h convert.h \
   $(srcdir)/../toplev.h $(srcdir)/../system.h
 verify.o : verify.c $(CONFIG_H) $(JAVA_TREE_H) jcf.h javaop.h java-opcodes.h \
