* configure.in (cpp_install_dir): Initialize from $enable_cpp         if that's looking like a pathname.         * configure: Rebuilt.         * Makefile.in (install-cpp, uninstall-cpp): cpp_install_dir is an         absolute pathname, not a $prefix relative pathname.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@25632 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/egcs_1_1_branch/gcc/Makefile.in
+++ b/egcs_1_1_branch/gcc/Makefile.in
@@ -2283,8 +2283,8 @@ install-cpp: cpp.sh
 	-rm -f $(bindir)/cpp
 	$(INSTALL_PROGRAM) -m 755 cpp.sh $(bindir)/cpp
 	if [ x$(cpp_install_dir) != x ]; then \
-	  rm -f $(prefix)/$(cpp_install_dir)/cpp; \
-	  $(INSTALL_PROGRAM) -m 755 cpp.sh $(prefix)/$(cpp_install_dir)/cpp; \
+	  rm -f $(cpp_install_dir)/cpp; \
+	  $(INSTALL_PROGRAM) -m 755 cpp.sh $(cpp_install_dir)/cpp; \
 	else true; fi
 
 cpp.sh: $(srcdir)/cpp.in Makefile
@@ -2294,7 +2294,7 @@ cpp.sh: $(srcdir)/cpp.in Makefile
 uninstall-cpp:
 	-rm -f $(bindir)/cpp
 	-if [ x$(cpp_install_dir) != x ]; then \
-	  rm -f $(prefix)/$(cpp_install_dir)/cpp; \
+	  rm -f $(cpp_install_dir)/cpp; \
 	else true; fi
 
 # Install float.h for cross compiler.
