* configure.in: Add mh-*pic handling for alpha, arm, powerpc
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25691 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libstdc++/configure.in
+++ b/libstdc++/configure.in
@@ -53,8 +53,12 @@ esac
 
 if [ "${shared}" = "yes" ]; then
   case "${target}" in
+    alpha*-*-linux*)	frags=../../config/mh-elfalphapic ;;
+    arm*-*-*)		frags=../../config/mh-armpic ;;
     hppa*-*-*)		frags=../../config/mh-papic ;;
     i[3456]86-*-*)	frags=../../config/mh-x86pic ;;
+    powerpc*-*-aix*)	;;
+    powerpc*-*-*)	frags=../../config/mh-ppcpic ;;
     *-*-*) 		frags=../../config/mh-${target_cpu}pic ;;
   esac
   case "${target}" in
