* pexecute.c (__CYGWIN32__): Rename to         (__CYGWIN__): this.         * xmalloc.c: Likewise.         Changes to support i386-pc-uwin.         * configure.in (*-*-uwin*): Workaround for vfork bug.         * configure: Regenerate.         * pexecute.c (pexecute): Be like standard Unix.         (pwait): Likewise.         * xmalloc.c (first_break): Define.         (xmalloc_set_program_name): Use.         (xmalloc): Use.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25694 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/configure.in
+++ b/libiberty/configure.in
@@ -276,6 +276,13 @@ if test -z "${setobjs}"; then
     AC_DEFINE(HAVE_SYS_ERRLIST)
     ;;
 
+  *-*-uwin*)
+    # Under some versions of uwin, vfork is notoriously buggy and the test 
+    # can hang configure; on other versions, vfork exists just as a stub.
+    # FIXME: This should be removed once vfork in uwin's runtime is fixed.
+    ac_cv_func_vfork_works=no
+    ;;
+
   esac
 
   # We haven't set the list of objects yet.  Use the standard autoconf
