--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -377,6 +377,15 @@ AC_CHECK_FUNCS(strtoul bsearch strerror putenv popen bcopy bzero bcmp \
 
 GCC_FUNC_VFPRINTF_DOPRNT
 GCC_FUNC_PRINTF_PTR
+
+case "${host}" in
+*-*-uwin*)
+  # Under some versions of uwin, vfork is notoriously buggy and the test 
+  # can hang configure; on other versions, vfork exists just as a stub.
+  # FIXME: This should be removed once vfork in uwin's runtime is fixed.
+  ac_cv_func_vfork_works=no
+  ;;
+esac
 AC_FUNC_VFORK
 
 GCC_NEED_DECLARATIONS(malloc realloc calloc free bcopy bzero bcmp \
@@ -1536,6 +1545,21 @@ changequote([,])dnl
 				tm_file="${tm_file} i386/crtdll.h"
 				;;
 		esac
+		;;
+changequote(,)dnl
+	i[34567]86-*-uwin*)
+changequote([,])dnl
+		tm_file=i386/uwin.h
+		xm_file="${xm_file} i386/xm-uwin.h"
+		xm_defines="USG NO_STAB_H NO_SYS_SIGLIST"
+		tmake_file="i386/t-cygwin i386/t-uwin"
+		extra_objs=winnt.o
+		xmake_file=i386/x-cygwin
+		fixincludes=Makefile.in
+ 		if test x$enable_threads = xyes; then
+			thread_file='win32'
+		fi
+		exeext=.exe
 		;;
 changequote(,)dnl
 	i[34567]86-*-winnt3*)
