Missing from fixincl-branch merge
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25727 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/fixinc/Makefile.in
+++ b/gcc/fixinc/Makefile.in
@@ -58,7 +58,7 @@ INCLUDES = -I. -I.. -I$(srcdir) -I$(srcdir)/.. -I$(srcdir)/../config -I$(srcdir)
 ##
 ## # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-OBJ = fixincl.o server.o regex.o
+OBJ = fixincl.o server.o regex.o procopen.o
 HDR = server.h regex.h
 LIBERTY = ../../libiberty/libiberty.a
 
