8 	* fixinc/Makefile.in (procopen.o): List the actual 	dependencies.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25773 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/fixinc/Makefile.in
+++ b/gcc/fixinc/Makefile.in
@@ -85,6 +85,7 @@ regex.o: regex.c
 
 fixincl.o : fixincl.x fixincl.c
 server.o : server.c server.h
+procopen.o : procopen.c server.h
 
 fixincl.x: fixincl.tpl inclhack.def
 	@if ( autogen --help > /dev/null 2>&1 ) ; then \
