--- a/configure.in
+++ b/configure.in
@@ -188,11 +188,8 @@ case "${host}" in
   i[3456]86-*-aix*)
     host_makefile_frag="${host_makefile_frag} config/mh-aix386"
     ;;
-  i[3456]86-*-go32*)
-    host_makefile_frag="${host_makefile_frag} config/mh-go32"
-    ;;
   i[3456]86-*-msdosdjgpp*)
-    host_makefile_frag="${host_makefile_frag} config/mh-go32"
+    host_makefile_frag="${host_makefile_frag} config/mh-djgpp"
     ;;
   *-cygwin32*)
     host_makefile_frag="${host_makefile_frag} config/mh-cygwin"
