* config/i386/go32.h: Delete.         * config/i386/djgpp.h: New. Renamed from go32.h.         Added -DDJGPP=2 to CPP_PREDEFINES.         * config/i386/go32-rtems.h: Delete.         * config/i386/djgpp-rtems.h: New. Renamed from go32-rtems.h.         Added -DDJGPP=2 to CPP_PREDEFINES.         * config/i386/xm-go32.h: Delete.         * config/i386/xm-djgpp.h: New. Renamed from xm-go32.h.         * config/i386/x-go32: Delete.         * config/i386/x-djgpp: New. Renamed from x-go32.         * config/i386/t-go32: Delete.         * config/i386/t-djgpp: New. Renamed from t-go32.         * configure.in(pc-msdosdjgpp): Set xm_file to i386/xm-djgpp.h.         Set tm_file to i386/djgpp.h. Set tmake_file to i386/t-djgpp.         Set xmake_file to i386/x-djgpp.         * configure: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25835 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -1199,22 +1199,20 @@ changequote([,])dnl
 changequote(,)dnl
 	i[34567]86-go32-msdos | i[34567]86-*-go32*)
 changequote([,])dnl
-		xm_file=i386/xm-go32.h
-		tm_file=i386/go32.h
-		tmake_file=i386/t-go32
+		echo "GO32/DJGPP V1.X is no longer supported. Use *-pc-msdosdjgpp for DJGPP V2.X instead."
+		exit (1)
 		;;
 changequote(,)dnl
 	i[34567]86-pc-msdosdjgpp*)
 changequote([,])dnl
-		xm_file=i386/xm-go32.h
-		tm_file=i386/go32.h
-		tmake_file=i386/t-go32
-                xmake_file=i386/x-go32
+		xm_file=i386/xm-djgpp.h
+		tm_file=i386/djgpp.h
+		tmake_file=i386/t-djgpp
+		xmake_file=i386/x-djgpp
 		gnu_ld=yes
 		gas=yes
 		exeext=.exe
-		case $host in
-		*pc-msdosdjgpp*)
+		case $host in *pc-msdosdjgpp*)
 			target_alias=djgpp
 			;;
 		esac
