* configure.in: Use "exit 1", not "exit (1)".         * configure: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25836 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -1200,7 +1200,7 @@ changequote(,)dnl
 	i[34567]86-go32-msdos | i[34567]86-*-go32*)
 changequote([,])dnl
 		echo "GO32/DJGPP V1.X is no longer supported. Use *-pc-msdosdjgpp for DJGPP V2.X instead."
-		exit (1)
+		exit 1
 		;;
 changequote(,)dnl
 	i[34567]86-pc-msdosdjgpp*)
