--- a/gcc/objc/Make-lang.in
+++ b/gcc/objc/Make-lang.in
@@ -71,6 +71,7 @@ objc-parse.o : $(srcdir)/objc/objc-parse.c \
 	$(CC) $(ALL_CFLAGS) $(ALL_CPPFLAGS) $(INCLUDES) -I$(srcdir)/objc \
 	-c $(srcdir)/objc/objc-parse.c
 
+$(INTL_TARGETS): $(srcdir)/objc/objc-parse.c
 $(srcdir)/objc/objc-parse.c : $(srcdir)/objc/objc-parse.y
 	cd $(srcdir)/objc; \
 	$(BISON) $(BISONFLAGS) objc-parse.y -o objc-parse.c
