* system.h: Use putc_unlocked, fputc_unlocked, and         fputs_unlocked only if putc_unlocked has a prototype already.         Prototype fputs_unlocked if necessary.         * configure.in: Check for prototypes of putc_unlocked and         fputs_unlocked.         * acconfig.h: Updated.         * config.in, configure: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25855 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config.in
+++ b/gcc/config.in
@@ -76,6 +76,9 @@
 /* Whether atol must be declared even if <stdlib.h> is included.  */
 #undef NEED_DECLARATION_ATOL
 
+/* Whether atof must be declared even if <stdlib.h> is included.  */
+#undef NEED_DECLARATION_ATOF
+
 /* Whether sbrk must be declared even if <stdlib.h> is included.  */
 #undef NEED_DECLARATION_SBRK
 
@@ -99,6 +102,12 @@
 
 /* Whether setrlimit must be declared even if <sys/resource.h> is included.  */
 #undef NEED_DECLARATION_SETRLIMIT
+
+/* Whether putc_unlocked must be declared even if <stdio.h> is included.  */
+#undef NEED_DECLARATION_PUTC_UNLOCKED
+
+/* Whether fputs_unlocked must be declared even if <stdio.h> is included.  */
+#undef NEED_DECLARATION_FPUTS_UNLOCKED
 
 /* Define if you want expensive run-time checks. */
 #undef ENABLE_CHECKING
