* arm/vxarm.h: Split out vxWorks support into separate headerfile         and vxify.         * arm/arm.c (cpu_defaults): Allow arm710 as default.         * configure.in: Split out vxWorks support for Arm.         * configure: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25932 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -665,6 +665,10 @@ changequote([,])dnl
 		tm_file=arm/coff.h
 		tmake_file=arm/t-bare
 		;;
+	arm-*-vxworks*)
+		tm_file="arm/coff.h arm/vxarm.h"
+		tmake_file=arm/t-bare
+		;;
 changequote(,)dnl
 	arm-*-riscix1.[01]*)		# Acorn RISC machine (early versions)
 changequote([,])dnl
