--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -123,8 +123,7 @@ RANLIB = ranlib
 # Test to use to see whether ranlib exists on the system.
 RANLIB_TEST = \
   [ -f $(RANLIB) ] \
-  || ( [ "$(host_canonical)" = "$(target)" ] \
-       && [ -f /usr/bin/ranlib -o -f /bin/ranlib ] )
+  || [ -f /usr/bin/ranlib -o -f /bin/ranlib ]
 
 # Compiler to use for compiling libgcc1.a.
 # OLDCC should not be the GNU C compiler,
