--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -720,6 +720,11 @@ changequote([,])dnl
 		tmake_file="t-linux arm/t-linux"
 		extra_parts="crtbegin.o crtbeginS.o crtend.o crtendS.o"
 		gnu_ld=yes
+		case x${enable_threads} in
+		x | xyes | xpthreads | xposix)
+			thread_file='posix'
+			;;
+		esac
 		;;
 	arm*-*-aout)
 		tm_file=arm/aout.h
