Just include arm/vxarm.h for arm-vxworks target
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@26001 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -666,7 +666,7 @@ changequote([,])dnl
 		tmake_file=arm/t-bare
 		;;
 	arm-*-vxworks*)
-		tm_file="arm/coff.h arm/vxarm.h"
+		tm_file=arm/vxarm.h
 		tmake_file=arm/t-bare
 		;;
 changequote(,)dnl
